--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.11.13",
     "peer": "^0.6.1",
+    "react-animated-heart": "^0.0.8",
+    "react-datepicker": "^4.24.0",
     "socket.io": "^3.1.2",
     "vn-badwords": "^1.1.9"
   },
